  * Virtual Console/XY Pad: fix Scene preset controlling wrong channels
  * Virtual Console/Clock: fix running a schedule the day after
  * Virtual Console/Button: Scene flashing can force LTP and override (thanks to Dennis Suermann)
  * Virtual Console/Cue List: fix off by one offset error in steps mode (thanks to kpr0th)
  * Plugins/ArtNet: add default standard transmission mode as per protocol specifications
  * Plugins/ArtNet,E1.31,OSC: add a parameter to wait for interfaces to be ready
  * Plugins/DMX USB: add support for DMXKing MAX products
  * Plugins/DMX USB: FTDI USB device no longer disappear after closing QLC+ on Linux
  * Fixture Editor: fix aliases not updated when renaming a mode
  * Web Access: add support for Cue List side fader and buttons layout (thanks to Itay Lifshitz)
  * Web Access: add support for Slider knob appearance (thanks to Itay Lifshitz)
  * Web Access: add VC Animation widget support (thanks to Itay Lifshitz)
  * Web Access: add event to notify Function start/stop
  * Input profiles: added PMJ 9 Faders Controller, Circus and MidiKey
  * New fixture: Ibiza Mini Moving Star Wash (thanks to Chris Shucksmith)
  * New fixtures: FOS Technologies IQ Par, IQ 28x12 Wash, Iridium 75W Spot (thanks to Maurizio Aru)
  * New fixture: Varytec Hero Spot 60 (thanks to Hans-Jürgen Tappe)
  * New fixture: beamZ BAC503 (thanks to archlinette)
  * New fixtures: Cameo Flat Pro 7, 12 and 18 (thanks to Janosch Frank)
  * New fixture: Eurolite LED TMH-X4 (thanks to Tolmino Muccitelli)
  * New fixtures: Cameo Q-Spot 40 RGBW, Varytec LED PAR 14x8W, Varytec LED Typhoon PAR Outdoor (12x10) (thanks to Jochen Becker)
  * New fixtures: Audibax Iowa 70, Pro-Lights CromoWash100 (thanks to Cristian)
  * New fixtures: Showtec Spectral M1000 Q4, Showtec Kanjo Wash RGB (thanks to Michel Sliepenbeek)
  * New fixtures: Laserworld CS-1000RGB Mk3, Chauvet Gobozap (thanks to Federico)
  * New fixture: Eurolite LED Bar 2 RGBA 252/10 40° Indoor (thanks to Edgar Aichinger)