@@ -191,7 +191,7 @@ void AudioBar::checkWidgetFunctionality()
     else if (m_widget->type() == VCWidget::SliderWidget)
     {
         VCSlider *slider = (VCSlider *)m_widget;
-        slider->setSliderValue(m_value);
+        slider->setSliderValue(m_value, true, true);
     }
     else if (m_widget->type() == VCWidget::SpeedDialWidget)
     {
